tests/base/parser/bad/remote_read_namespace.scilla
scilla_version 0

import ListUtils as L

contract T ()

transition F ()
  x <-& L.x.f;  (* We don't allow reads using namespaces at the moment (they don't make sense typewise anyway) *)
end